2012-11-25  Nikita Vasilyev  <me@elv1s.ru>

        Web Inspector: Remove unused Array.convert method
        https://bugs.webkit.org/show_bug.cgi?id=103202

        Reviewed by Daniel Bates.

        * inspector/front-end/utilities.js:

2012-11-25  Chris Fleizach  <cfleizach@apple.com>

        AX: file upload input cannot be activated with VoiceOver
        https://bugs.webkit.org/show_bug.cgi?id=100343

        Reviewed by Sam Weinig.

        Simulated events were not allowed to be processed in the file input type in the DOMActivate handler.
        This was a problem for accessibility clients which rely on simulated events.

        The solution is to mark the UserGestureIndicator as definitely processing an event.

        Test: accessibility/file-upload-button-with-axpress.html

        * accessibility/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::press):

2012-11-25  Nikita Vasilyev  <me@elv1s.ru>

        Web Inspector: dispatch an event upon heap snapshot filter change
        https://bugs.webkit.org/show_bug.cgi?id=103201

        Reviewed by Pavel Feldman.

        Dispatch heapSnapshotFilterChanged event so it can be received by third parties.

        * inspector/front-end/HeapSnapshotView.js:
        (WebInspector.HeapSnapshotView.prototype._changeFilter):
        * inspector/front-end/UserMetrics.js:

2012-11-25  Kent Tamura  <tkent@chromium.org>

        Refactoring: Move the content of HTMLInputElement::subtreeHasChanged to TextFieldInputType
        https://bugs.webkit.org/show_bug.cgi?id=103195

        Reviewed by Kentaro Hara.

        HTMLInputElement::subtreeHasChanged is called only if the input is
        a text field. The code should be moved to TextFieldInputType.

        No new tests. This should not change any behavior.

        * html/HTMLInputElement.cpp:
        - Remove unnecessary NumberInputType.h inclusion.
        - Remove convertFromVisibleValue. It was used only by subtreeHasChanged.